Fix Java 11